CLAP-81 Fix: 로그 조회 패키지 계층 분리